improved ui - nav bar and search bar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav id="navDiv"
-      class="px-4 py-1 flex justify-between items-center h-16 fixed z-10 w-full shadow-sm top-0 transition-all bg-white/55 backdrop-blur-md">
+      class="px-4 py-1 flex justify-between items-center h-16 fixed z-10 w-full shadow-sm top-0 transition-all bg-indigo-100/85 backdrop-blur-md">
       <!-- Logo Section -->
       <a routerLink="/home" class="flex items-center">
             <img src="logo.png" alt="Logo" class="w-14 h-14">
@@ -11,13 +11,13 @@
       <ul class="hidden md:flex space-x-6">
             <li>
                   <a routerLink="/home"
-                        class="flex text-md px-4 py-2 rounded font-semibold text-gray-600 hover:bg-gray-200 hover:text-gray-900 transition-colors">
+                        class="flex text-md px-4 py-2 rounded font-semibold text-gray-600 hover:bg-black/10 hover:text-gray-900 transition-colors">
                         Home
                   </a>
             </li>
             <li>
                   <a routerLink="/films"
-                        class="flex text-md px-4 py-2 rounded font-semibold text-gray-600 hover:bg-gray-200 hover:text-gray-900 transition-colors">
+                        class="flex text-md px-4 py-2 rounded font-semibold text-gray-600 hover:bg-black/10 hover:text-gray-900 transition-colors">
                         Films
                   </a>
             </li>
