--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -50,3 +50,19 @@ button.scroll-btn fa-icon {
 button.scroll-btn:hover fa-icon {
   transform: translateY(5px);
 }
+
+.header-gradient {
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.15),
+    0 1.5rem 3rem rgba(90, 100, 238, 0.1),
+    inset 0 200px 250px rgba(134, 181, 255, 0.35),
+    inset 0 -80px 120px rgba(2, 28, 122, 0.25);
+  background: linear-gradient(
+    120deg,
+    rgba(225, 232, 255, 0.95) 0%,
+    rgba(180, 200, 255, 0.85) 40%,
+    rgba(90, 100, 238, 0.85) 100%
+  );
+  /* backdrop-filter: blur(12px) saturate(160%);
+  border-radius: 1.5rem;
+  border: 1px solid rgba(255, 255, 255, 0.25); */
+}
